@@ -19,6 +19,9 @@ Revision history for FusionInventory::Agent
 	* various internal optimisations
 	* large test suite improvements
         * Add the HARDWARE/CHASSIS_TYPE information
+        * Linux: Use /sbin/ip to get the interface IP addresses
+          http://forge.fusioninventory.org/issues/854
+          thanks İbrahim Özgür Erişen for the bug report.
 
 2.1.8  Fri, 25 Mar 2011 16:09:15 +0100
        * Show a larger part of the string returned by the server in case of
